Multiwallet: fix overflow/scrolling issue with many wallets

--- a/src/app/core-ui/main/main.router.scss
+++ b/src/app/core-ui/main/main.router.scss
@@ -163,7 +163,7 @@ a.sidebar-item-link {
     align-items: stretch;
   }
   .sidebar-multiwallet {
-    flex: 0 0 30px;
+    flex: 0 0 54px;
     position: sticky;
     top: 0;
   }
