--- a/src/app/multiwallet/multiwallet-sidebar.component.scss
+++ b/src/app/multiwallet/multiwallet-sidebar.component.scss
@@ -6,10 +6,13 @@
   display: flex;
   flex-direction: column;
   background: darken($bg-black, 5%);
-  height: calc(100vh - (#{$spacing} * 2));
-  padding: $spacing 10px;
+  height: 100vh;
+
+  // wallet selection
   .multiwallet {
     flex: 1 1 100%;
+    overflow-y: scroll;
+    padding: $spacing (10px - $scrollbar-width) $spacing 10px;
     .mat-raised-button {
       @extend %tfx;
       min-width: auto;
@@ -27,10 +30,23 @@
           background: lighten($bg-black, 15%);
         }
       }
+      &:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+    &::-webkit-scrollbar-thumb {
+      background: darken($bg-black, 10%);
+      border-radius: 4px;
+    }
+    &::-webkit-scrollbar-track {
+      background: darken($bg-black, 5%);
     }
   }
+
+  // app-wide stuff (settings, bugs, ..)
   .buttons {
     flex: 1 1 10px;
+    padding: $spacing 10px;
     .mat-button {
       width: 34px;
       margin: 6px 0 0;
@@ -43,6 +59,7 @@
       }
     }
   }
+
 }
 
 .mat-button,
